[gd_scene load_steps=5 format=2]

[ext_resource path="res://EconPhase/Expense/BuildShipListItem.gd" type="Script" id=1]
[ext_resource path="res://Fonts/IndepModernSmol.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/IndepModern.tres" type="DynamicFont" id=3]
[ext_resource path="res://Utility/UpDownButton.tscn" type="PackedScene" id=4]

[node name="BuildShipListItem" type="MarginContainer"]
anchor_right = 1.0
margin_bottom = 20.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 380.0
margin_bottom = 23.0
size_flags_vertical = 0

[node name="InfoButton" type="Button" parent="HBoxContainer"]
visible = false
margin_right = 19.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.745098, 0.854902, 1, 1 )
text = "i"

[node name="Type" type="Label" parent="HBoxContainer"]
margin_right = 243.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
text = "ShpTyp"
valign = 1

[node name="Amount" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 247.0
margin_right = 281.0
margin_bottom = 23.0

[node name="Current" type="Label" parent="HBoxContainer/Amount"]
margin_right = 11.0
margin_bottom = 23.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
text = "3"
valign = 1

[node name="New" type="Label" parent="HBoxContainer/Amount"]
margin_left = 15.0
margin_right = 34.0
margin_bottom = 23.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.759038, 1, 0.745098, 1 )
text = "+1"
valign = 1

[node name="UpDownButton" parent="HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_left = 285.0
margin_right = 334.0
margin_bottom = 23.0
size_flags_vertical = 1
max_value = 16

[node name="Cost" type="Label" parent="HBoxContainer"]
margin_left = 338.0
margin_right = 380.0
margin_bottom = 23.0
rect_min_size = Vector2( 42, 0 )
size_flags_vertical = 5
custom_fonts/font = ExtResource( 2 )
text = "99 CP"
align = 2
valign = 1

[connection signal="value_changed" from="HBoxContainer/UpDownButton" to="." method="_on_UpDownButton_value_changed"]
